# OukaroManager

./: .gitignore  README.md  commit.txt
.github/workflows/: build.yml
module/: .gitignore  customize.sh  module.prop  post-mount.sh  service.sh
okrmng/: Cargo.toml
okrmng/src/: cli.rs  config.rs  defs.rs  main.rs
oukaro/: Cargo.toml
oukaro/src/: android_install_path.rs  android_package.rs  android_package_state.rs  android_xml.rs  config.rs  defs.rs  main.rs  utils.rs
shared/: android_install_path.rs  android_package.rs  android_xml.rs
webui/: README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  vite.config.ts
webui/public/: config.json
webui/scripts/: clean-webroot.mjs
webui/src/: App.vue  main.ts  style.css
webui/src/components/ui/alert/: Alert.vue  alert.ts  index.ts
webui/src/components/ui/badge/: Badge.vue  badge.ts  index.ts
webui/src/components/ui/button/: Button.vue  button.ts
webui/src/components/ui/card/: Card.vue
webui/src/components/ui/input/: Input.vue
webui/src/components/ui/radio-group/: RadioGroup.vue  index.ts  types.ts
webui/src/components/ui/scroll-area/: ScrollArea.vue
webui/src/components/ui/separator/: Separator.vue
webui/src/components/ui/toaster/: Toaster.vue
webui/src/lib/: i18n.ts  module-api.ts  types.ts
